PRL-4606 - Added test cases coverage for review document redesign changes